--- a/app/components/popover/index.css
+++ b/app/components/popover/index.css
@@ -5,10 +5,11 @@
 }
 
 .Popover_Wrapper_Box {
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
   width: 100%;
+  z-index: 999;
 }
 
 .Popover_Wrapper_Content {
