feat: add tooltip component

--- a/app/index.css
+++ b/app/index.css
@@ -415,6 +415,7 @@ textarea {
     min-height: 100vh;
     overflow: hidden;
     background: #fafafa;
+    position: relative;
 }
 
 .codemirror-mobile-textarea:focus {
