--- a/app/common/button/index.css
+++ b/app/common/button/index.css
@@ -40,14 +40,14 @@
   border-color: #25b864;
 }
 
-.Button_default:not(.Button_disabled):hover {
+.Button_default:not(.Button_disabled):not(.Button_loading):hover {
   background-image: linear-gradient(0deg, #f5f5f5, #fff);
   background: #fafafa;
   color: #47c479;
   border-color: #47c479;
 }
 
-.Button_default:not(.Button_disabled):active {
+.Button_default:not(.Button_disabled):not(.Button_loading):active {
   color: #16914f;
   background-color: #fafafa;
   border-color: #16914f;
