--- a/app/components/header-article/index.css
+++ b/app/components/header-article/index.css
@@ -7,6 +7,7 @@
 }
 
 .Article_Header_Wrapper {
+    max-width: 1200px;
     height: 58px;
     will-change: margin;
     margin: 0 auto;
@@ -123,4 +124,5 @@
     font-size: 12px;
     color: #8c8c8c;
     margin-left: 20px;
+    flex-shrink: 0;
 }
