--- a/app/page/spacedetail/index.css
+++ b/app/page/spacedetail/index.css
@@ -13,6 +13,12 @@
   overflow-x: hidden;
 }
 
+.space_detail_loading {
+  top: 40px;
+  padding-bottom: 40px;
+  background: gray;
+}
+
 .space_detail_header .Header_container {
   max-width: 1056px;
 }
