--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -53,7 +53,7 @@
   margin-right: 16px;
 }
 
-.Footer_Meta_Item>div {
+.Footer_Meta_Item>.Icon {
   margin-right: 7px;
   position: relative;
   top: 1px;
