--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -9,7 +9,7 @@
   width: calc(100% - 445px);
   height: 100vh;
   flex-shrink: 0;
-  background: rgb(249, 250, 251);
+  background-color: #fff;
   box-sizing: border-box;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -18,21 +18,6 @@
 
 .Article_Preview_Wrapper_Big {
   width: calc(100% - 260px);
-}
-
-.Article_Preview_Wrapper_Big>#editormd>.editormd-preview {
-  width: 100% !important;
-}
-
-#editormd {
-  min-height: calc(100vh - 260px);
-  border: none;
-  margin-bottom: 0;
-  background: rgb(249, 250, 251);
-}
-
-.editormd_mobile .editormd-preview .editormd-preview-active {
-  padding: 16px;
 }
 
 .Footer_Meta {
@@ -63,19 +48,68 @@
   max-width: 120px;
 }
 
-.editormd-preview {
-  height: auto !important;
-  position: relative;
-  width: 100% !important;
-}
-
 .Article_Preview_Wrapper>h1 {
   color: #262626;
   font-weight: 700;
   font-size: 36px;
-  padding: 16px;
-  border-bottom: 1px solid #e8e8e8;
-  background: rgb(249, 250, 251);
+  padding: 16px 36px;
+  background: #fff;
+  color: #262626;
+}
+
+.article_html {
+  padding: 0 36px;
+  font-size: 16px;
+  font-family: arial, sans-serif;
+  line-height: 1.6;
+}
+
+.article_html h1,
+.article_html h2,
+.article_html h3,
+.article_html h4,
+.article_html h5 {
+  padding: 6px 0;
+}
+
+.article_html h1 {
+  font-size: 24px;
+}
+
+.article_html h2 {
+  font-size: 22px;
+}
+
+.article_html h3 {
+  font-size: 20px;
+}
+
+.article_html h4 {
+  font-size: 18px;
+}
+
+.article_html h5 {
+  font-size: 16px;
+}
+
+.article_html hr {
+  height: 0px;
+  border: 0;
+  border-top: 2px solid #e8e8e8;
+  margin: 15px 0;
+  padding: 0;
+}
+
+.article_html p {
+  margin: 0;
+  color: #333;
+  word-wrap: break-word;
+  line-height: 26px;
+}
+
+.article_html img {
+  margin: 0 5px;
+  vertical-align: middle;
 }
 
 .article_preview_wrapper_m {
@@ -90,7 +124,7 @@
 .Article_DraftTips_Warpper {
   width: 100%;
   padding: 16px 20px;
-  margin-bottom: 24px;
+  padding-bottom: 0;
 }
 
 .article_draftTip_mobile {
