--- a/app/index.css
+++ b/app/index.css
@@ -67,8 +67,8 @@ summary {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
-    font-weight: normal;
+    /* font-size: 100%; */
+    /* font-weight: normal; */
     vertical-align: baseline;
     background: transparent;
     box-sizing: border-box;
@@ -82,7 +82,7 @@ body {
     -webkit-text-size-adjust: 100%;
     font-family: Chinese Quote, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
-    color: #595959;
+    /* color: #595959; */
     font-size: 14px;
     font-variant: tabular-nums;
     line-height: 1.5;
@@ -365,7 +365,7 @@ button,
 input,
 select,
 textarea {
-    font: 12px \5FAE\8F6F\96C5\9ED1, arial, \5b8b\4f53;
+    /* font: 12px \5FAE\8F6F\96C5\9ED1, arial, \5b8b\4f53; */
 }
 
 .container-box {
