--- a/app/components/book-catalog/index.css
+++ b/app/components/book-catalog/index.css
@@ -1,12 +1,13 @@
 .BookCatalog_Wrapper {
   width: 224px;
-  padding: 27px 24px 24px 24px;
+  height: 100vh;
+  padding: 10px 24px 24px 24px;
   box-sizing: border-box;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
   border-right: 1px solid #e8e8e8;
-  background: #ffffff;
+  background: #fafafa;
 }
 
 .BookCatalog_Item {
