--- a/app/components/mobile-article-toolbar/index.css
+++ b/app/components/mobile-article-toolbar/index.css
@@ -7,7 +7,7 @@
   background: #fff;
   height: 50px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 12px 60px;
   border-top: 1px solid #e8e8e8;
 }
