--- a/app/page/article/index.css
+++ b/app/page/article/index.css
@@ -1,5 +1,10 @@
+.article {
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+}
 
-.Content_Wrapper{
+.Content_Wrapper {
   padding: 0;
   height: 100vh;
 }
