--- a/app/components/editormd/index.css
+++ b/app/components/editormd/index.css
@@ -45,14 +45,14 @@
     min-height: calc(100vh - 58px);
 }
 
-.CodeMirror_title {
+.simditor-title {
     width: 100%;
     border-bottom: 1px solid #e8e8e8;
     height: 60px;
     overflow: hidden;
 }
 
-.CodeMirror_title>input {
+.simditor-title>input {
     width: 100%;
     height: 100%;
     color: #262626;
@@ -60,7 +60,7 @@
     font-size: 30px;
 }
 
-.CodeMirror_title_left {
+.simditor-title_left {
     width: 48px;
     height: 100%;
     background-color: #f7f7f7;
@@ -68,19 +68,19 @@
     justify-content: center;
 }
 
-.CodeMirror_title_left>img {
+.simditor-title_left>img {
     width: 20px;
 }
 
-.codemirror_title_mobile {
+.simditor-title_mobile {
     height: 44px;
 }
 
-.codemirror_title_mobile>.CodeMirror_title_left {
+.simditor-title_mobile>.simditor-title_left {
     display: none;
 }
 
-.codemirror_title_mobile>input {
+.simditor-title_mobile>input {
     font-size: 20px;
 }
 
