--- a/app/components/footer/index.css
+++ b/app/components/footer/index.css
@@ -1,10 +1,10 @@
-.Footer_Wrapper {
+.footer-wrapper {
   width: 100%;
   padding: 10px 0 20px 0;
   position: relative;
 }
 
-.Footer_Wrapper_Tip {
+.footer-wrapper_Tip {
   justify-content: center;
   flex: 1;
   font-size: 14px;
@@ -13,17 +13,17 @@
   padding-bottom: 10px;
 }
 
-.Footer_Wrapper_Tip>div>span {
+.footer-wrapper_Tip>div>span {
   font-weight: 500;
 }
 
-.Footer_Wrapper_Tip>div>img {
+.footer-wrapper_Tip>div>img {
   width: 40px;
   padding: 10px;
   box-sizing: content-box;
 }
 
-.Footer_Wrapper_Tip>span {
+.footer-wrapper_Tip>span {
   color: #595959;
   padding: 0 10px;
 }
