feat: 调整toolbar 元素位置

--- a/app/public/editor/simditor.css
+++ b/app/public/editor/simditor.css
@@ -149,7 +149,7 @@
   background: transparent;
   overflow-y: scroll;
   height: calc(100% - 40px);
-  margin-top: 50px;
+  min-height: 800px;
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
 }
@@ -280,20 +280,18 @@
   -webkit-user-select: text;
 }
 
-.simditor .simditor-toolbar {
-  background: #fafafa;
-  min-width: 1000px;
+.simditor-toolbar {
+  background: #fff;
+  min-width: 1280px;
   width: 100%;
   border-top: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   display: flex;
   justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
+  transition: all linear 0.2s;
 }
 
-.simditor .simditor-toolbar>ul {
+.simditor-toolbar>ul {
   margin: 0;
   padding: 0 0 0 6px;
   list-style: none;
@@ -309,13 +307,13 @@
 }
 
 
-.simditor .simditor-toolbar>ul>li {
+.simditor-toolbar>ul>li {
   position: relative;
   display: inline-block;
   font-size: 0;
 }
 
-.simditor .simditor-toolbar>ul>li>span.separator {
+.simditor-toolbar>ul>li>span.separator {
   display: inline-block;
   background: #cfcfcf;
   width: 1px;
@@ -324,7 +322,7 @@
   vertical-align: middle;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item {
+.simditor-toolbar>ul>li>.toolbar-item {
   display: inline-block;
   width: 46px;
   height: 40px;
@@ -337,63 +335,63 @@
   text-decoration: none;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item span {
+.simditor-toolbar>ul>li>.toolbar-item span {
   opacity: 0.6;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item span.simditor-icon {
+.simditor-toolbar>ul>li>.toolbar-item span.simditor-icon {
   display: inline;
   line-height: normal;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item:hover span {
+.simditor-toolbar>ul>li>.toolbar-item:hover span {
   opacity: 1;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.active {
+.simditor-toolbar>ul>li>.toolbar-item.active {
   background: #eeeeee;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.active span {
+.simditor-toolbar>ul>li>.toolbar-item.active span {
   opacity: 1;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.disabled {
+.simditor-toolbar>ul>li>.toolbar-item.disabled {
   cursor: default;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.disabled span {
+.simditor-toolbar>ul>li>.toolbar-item.disabled span {
   opacity: 0.3;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title span:before {
+.simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title span:before {
   content: "H";
   font-size: 19px;
   font-weight: bold;
   font-family: 'Times New Roman';
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title.active-h1 span:before {
+.simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title.active-h1 span:before {
   content: 'H1';
   font-size: 18px;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title.active-h2 span:before {
+.simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title.active-h2 span:before {
   content: 'H2';
   font-size: 18px;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title.active-h3 span:before {
+.simditor-toolbar>ul>li>.toolbar-item.toolbar-item-title.active-h3 span:before {
   content: 'H3';
   font-size: 18px;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.toolbar-item-image {
+.simditor-toolbar>ul>li>.toolbar-item.toolbar-item-image {
   position: relative;
   overflow: hidden;
 }
 
-.simditor .simditor-toolbar>ul>li>.toolbar-item.toolbar-item-image>input[type=file] {
+.simditor-toolbar>ul>li>.toolbar-item.toolbar-item-image>input[type=file] {
   position: absolute;
   right: 0px;
   top: 0px;
@@ -402,22 +400,22 @@
   cursor: pointer;
 }
 
-.simditor .simditor-toolbar>ul>li.menu-on .toolbar-item {
+.simditor-toolbar>ul>li.menu-on .toolbar-item {
   position: relative;
   z-index: 20;
   background: #ffffff;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
-.simditor .simditor-toolbar>ul>li.menu-on .toolbar-item span {
+.simditor-toolbar>ul>li.menu-on .toolbar-item span {
   opacity: 1;
 }
 
-.simditor .simditor-toolbar>ul>li.menu-on .toolbar-menu {
+.simditor-toolbar>ul>li.menu-on .toolbar-menu {
   display: block;
 }
 
-.simditor .simditor-toolbar .toolbar-menu {
+.simditor-toolbar .toolbar-menu {
   display: none;
   position: absolute;
   top: 40px;
@@ -428,7 +426,7 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
 }
 
-.simditor .simditor-toolbar .toolbar-menu:before {
+.simditor-toolbar .toolbar-menu:before {
   content: '';
   display: block;
   width: 46px;
@@ -439,14 +437,14 @@
   left: 0;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul {
+.simditor-toolbar .toolbar-menu ul {
   min-width: 160px;
   list-style: none;
   margin: 0;
   padding: 10px 1px;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .menu-item {
+.simditor-toolbar .toolbar-menu ul>li .menu-item {
   display: block;
   font-size: 16px;
   line-height: 2em;
@@ -455,36 +453,36 @@
   color: #666666;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .menu-item:hover {
+.simditor-toolbar .toolbar-menu ul>li .menu-item:hover {
   background: #f6f6f6;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h1 {
+.simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h1 {
   font-size: 24px;
   color: #333333;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h2 {
+.simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h2 {
   font-size: 22px;
   color: #333333;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h3 {
+.simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h3 {
   font-size: 20px;
   color: #333333;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h4 {
+.simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h4 {
   font-size: 18px;
   color: #333333;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h5 {
+.simditor-toolbar .toolbar-menu ul>li .menu-item.menu-item-h5 {
   font-size: 16px;
   color: #333333;
 }
 
-.simditor .simditor-toolbar .toolbar-menu ul>li .separator {
+.simditor-toolbar .toolbar-menu ul>li .separator {
   display: block;
   border-top: 1px solid #cccccc;
   height: 0;
@@ -493,23 +491,23 @@
   margin: 6px 0;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color {
   width: 96px;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list {
   height: 40px;
   margin: 10px 6px 6px 10px;
   padding: 0;
   min-width: 0;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li {
   float: left;
   margin: 0 4px 4px 0;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color {
   display: block;
   width: 16px;
   height: 16px;
@@ -517,60 +515,60 @@
   border-radius: 2px;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color:hover {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color:hover {
   opacity: 0.8;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color.font-color-default {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color.font-color-default {
   background: #333333;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-1 {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-1 {
   background: #E33737;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-2 {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-2 {
   background: #e28b41;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-3 {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-3 {
   background: #c8a732;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-4 {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-4 {
   background: #209361;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-5 {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-5 {
   background: #418caf;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-6 {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-6 {
   background: #aa8773;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-7 {
+.simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-7 {
   background: #999999;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table {
+.simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table {
   background: #ffffff;
   padding: 1px;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table {
+.simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table {
   border: none;
   border-collapse: collapse;
   border-spacing: 0;
   table-layout: fixed;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table td {
+.simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table td {
   padding: 0;
   cursor: pointer;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table td:before {
+.simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table td:before {
   width: 16px;
   height: 16px;
   border: 1px solid #ffffff;
@@ -579,24 +577,24 @@
   content: "";
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table td.selected:before {
+.simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-create-table table td.selected:before {
   background: #cfcfcf;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-edit-table {
+.simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-edit-table {
   display: none;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-edit-table ul li {
+.simditor-toolbar .toolbar-menu.toolbar-menu-table .menu-edit-table ul li {
   white-space: nowrap;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-image .menu-item-upload-image {
+.simditor-toolbar .toolbar-menu.toolbar-menu-image .menu-item-upload-image {
   position: relative;
   overflow: hidden;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-image .menu-item-upload-image input[type=file] {
+.simditor-toolbar .toolbar-menu.toolbar-menu-image .menu-item-upload-image input[type=file] {
   position: absolute;
   right: 0px;
   top: 0px;
@@ -605,15 +603,15 @@
   cursor: pointer;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-alignment {
+.simditor-toolbar .toolbar-menu.toolbar-menu-alignment {
   width: 100%;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-alignment ul {
+.simditor-toolbar .toolbar-menu.toolbar-menu-alignment ul {
   min-width: 100%;
 }
 
-.simditor .simditor-toolbar .toolbar-menu.toolbar-menu-alignment .menu-item {
+.simditor-toolbar .toolbar-menu.toolbar-menu-alignment .menu-item {
   text-align: center;
 }
 
@@ -1026,32 +1024,32 @@
   background-image: url("/images/check.svg");
 }
 
-.simditor .simditor-toolbar .toolbar-item-emoji span.fa {
+.simditor-toolbar .toolbar-item-emoji span.fa {
   color: #888;
   font-weight: bold;
 }
 
-.simditor .simditor-toolbar .toolbar-menu-emoji {
+.simditor-toolbar .toolbar-menu-emoji {
   width: 296px;
 }
 
-.simditor .simditor-toolbar ul.emoji-list {
+.simditor-toolbar ul.emoji-list {
   padding: 6px 8px;
   overflow: hidden;
 }
 
-.simditor .simditor-toolbar ul.emoji-list li {
+.simditor-toolbar ul.emoji-list li {
   float: left;
   cursor: pointer;
   padding: 4px;
   border-radius: 4px;
 }
 
-.simditor .simditor-toolbar ul.emoji-list li:hover {
+.simditor-toolbar ul.emoji-list li:hover {
   background-color: #f0f0f0;
 }
 
-.simditor .simditor-toolbar ul.emoji-list img {
+.simditor-toolbar ul.emoji-list img {
   display: block;
 }
 
