--- a/app/page/simditor/index.css
+++ b/app/page/simditor/index.css
@@ -1,5 +1,6 @@
 .simditor_page {
   width: 100%;
+  /* height: 100vh; */
   background: #fafafa;
   position: relative;
 }
@@ -14,9 +15,9 @@
   margin: 0 auto;
   position: relative;
   background: #fafafa;
-  width: 1280px;
   height: 100%;
   overflow-y: hidden;
+  width: 1280px;
 }
 
 .simditor-content_mobile {
