--- a/app/components/article-catalog/index.css
+++ b/app/components/article-catalog/index.css
@@ -1,4 +1,4 @@
-.Article_Catalog_Wrapper {
+.catalog-wrapper {
     width: 221px;
     height: 100vh;
     overflow: hidden;
@@ -10,7 +10,7 @@
     z-index: 1;
 }
 
-.Catalog_title {
+.catalog-title {
     box-sizing: border-box;
     font-size: 14px;
     font-weight: bold;
@@ -22,7 +22,7 @@
     width: 100%;
 }
 
-.Catalog_box {
+.catalog-box {
     max-height: 100vh;
     overflow-y: scroll;
     padding-top: 10px;
@@ -30,7 +30,7 @@
     box-sizing: border-box;
 }
 
-.Catalog_item {
+.catalog-item {
     font-size: 12px;
     color: #595959;
     padding: 4px 0;
@@ -40,27 +40,27 @@
     cursor: pointer;
 }
 
-.Catalog_item:hover {
+.catalog-item:hover {
     color: #1890FF;
 }
 
-.Catalog_item>span {
+.catalog-item>span {
     line-height: 20px;
     padding-top: 4px;
     padding-bottom: 4px;
 }
 
-.Catalog_item_h1 {}
+.catalog-item_h1 {}
 
-.Catalog_item_h2 {
+.catalog-item_h2 {
     padding-left: 16px;
 }
 
-.Catalog_item_h3 {
+.catalog-item_h3 {
     padding-left: 32px;
 }
 
-.Catalog_item_h4 {
+.catalog-item_h4 {
     padding-left: 48px;
 }
 
