--- a/app/page/simditor/index.css
+++ b/app/page/simditor/index.css
@@ -1,12 +1,13 @@
-.simditor_page {
+.simditor-page {
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
   background: #fafafa;
   position: relative;
 }
 
 .simditor-container {
   width: 100%;
+  height: calc(100% - 58px);
   overflow-x: scroll;
   overflow-y: hidden;
 }
@@ -29,7 +30,7 @@
   visibility: hidden;
 }
 
-.simditor_header {
+.simditor-header {
   box-shadow: none;
 }
 
