--- a/app/media.css
+++ b/app/media.css
@@ -46,7 +46,7 @@
         display: none;
     }
 
-    .Header_right>.Popover_Wrapper {
+    .header-right>.Popover_Wrapper {
         margin-right: 20px;
     }
 
