--- a/app/page/spacedetail/index.css
+++ b/app/page/spacedetail/index.css
@@ -19,7 +19,7 @@
   background: gray;
 }
 
-.space_detail_header .Header_container {
+.space_detail_header .header-container {
   max-width: 1056px;
 }
 
