--- a/app/components/mobile-article-toolbar/index.css
+++ b/app/components/mobile-article-toolbar/index.css
@@ -32,6 +32,7 @@
   background-color: rgba(0, 0, 0, .3);
   transition: opacity .3s ease-in-out;
   display: none;
+  z-index: 1;
 }
 
 .mobile_catalogs-show {
